--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  Placeholder
+  <header class="header">
+    Header
+  </header>
 </body>
 </html>
